--- a/index.html
+++ b/index.html
@@ -1,12 +1,53 @@
 <!DOCTYPE html>
-
 <html>
 <head>
-<title>CECOT Information</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+<title>CECOT: Evidence of Torture and Abuse</title>
+  <style></style>
 </head>
-
 <body>
-<video src="/cecot-60mins.mp4" controls>
-</body>
 
+  <div style="max-width: 700px">
+<h1>Inside CECOT: Torture at El Salvador's Mega-Prison</h1>
+
+<video src="/cecot-60mins.mp4" controls style="width: 100%"></video>
+
+<h2>About This Documentary</h2>
+<p>This is the 60 Minutes segment "Inside CECOT" reported by correspondent Sharyn Alfonsi. CBS News Editor-in-Chief Bari Weiss shelved the segment just hours before it was scheduled to air in December 2025 , though it subsequently streamed on a Canadian network's platform and spread widely online .</p>
+
+<h2>What is CECOT?</h2>
+<p>CECOT stands for Centro de Confinamiento del Terrorismo, which translates to Terrorism Confinement Center . It is a maximum-security mega-prison in Tecoluca, El Salvador.</p>
+
+<h2>Documented Evidence of Torture</h2>
+
+<h3>Human Rights Watch and Cristosal Investigation</h3>
+<p>In November 2025, Human Rights Watch released an 81-page report documenting that detainees were subjected to constant beatings and other forms of ill-treatment, including some cases of sexual violence, with many of these abuses constituting torture under international human rights law .</p>
+
+<p>People held in CECOT reported being beaten from the moment they arrived in El Salvador and throughout their detention, including in hallways and in a solitary confinement section known as "the Island" .</p>
+
+<h3>The Venezuelan Deportees</h3>
+<p>In 2025, 252 Venezuelan immigrants in the United States were flown to El Salvador in the dead of night and indefinitely imprisoned at CECOT . These deportations occurred between March and April 2025, with the men released from CECOT in July in exchange for the release of 10 Americans held in Venezuela .</p>
+
+<p>The detainees had no ability to communicate with the outside world and were subjected to beatings almost daily upon arrival .</p>
+
+<h3>Testimony from Survivors</h3>
+<p>One former detainee, Luis Munoz Pinto, described the experience: the torture was never-ending, with blood everywhere, screams, people crying, and people who couldn't endure it urinating or vomiting on themselves .</p>
+
+<p>Upon arrival, the CECOT director allegedly told the deportees they would never see the light of day or night again, welcoming them to hell and promising they would never leave .</p>
+
+<p>Survivors reported being beaten, shot with rubber projectiles, and confined in dark cells, with many showing wounds from nightsticks, fractured bones, handcuff marks, and marks from projectiles . The men were forced to sleep on metal slabs without mattresses, pillows, or blankets and were under constant surveillance .</p>
+
+<h3>Systematic Nature of Abuse</h3>
+<p>The abuses documented in CECOT were not isolated incidents by rogue guards, but rather systematic violations that took place repeatedly during detention .</p>
+
+<p>Human Rights Watch found that prison guards were clearly trying to hide their identities while torturing the Venezuelan migrants .</p>
+
+<h2>International Law Violations</h2>
+<p>The United States sent the 252 Venezuelans to CECOT despite credible prior reports that torture and other abuses were taking place in El Salvador's prisons, which violates the principle of non-refoulement established in the Convention against Torture .</p>
+
+<h2>Why This Story Matters</h2>
+<p>This documentary provides firsthand accounts from survivors of alleged systematic torture carried out in a facility where the U.S. government deported individuals. The suppression and subsequent release of this segment has raised significant questions about press freedom and government accountability.</p>
+  </div>
+</body>
 </html>
