--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
 
-  <div style="max-width: 700px">
+  <div style="max-width: 700px; margin-left: auto; margin-right: auto;">
+
+<p style="padding: 4rem; text-align: center;">Key takeaway: The U.S. government is sending people, potentially citizens, with no due process to a megaprison where they are being tortured.</p>
+    
 <h1>Inside CECOT: Torture at El Salvador's Mega-Prison</h1>
 
 <video src="/cecot-60mins.mp4" controls style="width: 100%"></video>
