--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
 
-  <div style="max-width: 700px; margin-left: auto; margin-right: auto;">
+  <div style="max-width: 800px; margin-left: auto; margin-right: auto;">
 
-<p style="padding: 4rem; text-align: center;">Key takeaway: The U.S. government is sending people, potentially citizens, with no due process to a megaprison where they are being tortured.</p>
+<p style="padding: 4rem;">The U.S. government is sending people to a prison where they are tortured.<br/><br/>They receieve no due process.<br><br>This means the prisoners could include <b>U.S CITIZENS and LEGAL RESIDENTS</b>. We have no way of knowing because there are no trials or hearings, they are just sent away.</p>
     
 <h1>Inside CECOT: Torture at El Salvador's Mega-Prison</h1>
 
